--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,7 +39,17 @@ html{
   font-size: 36px;
   margin-left: 50px;
 }
-
+.foot{
+  background-color: #111;
+  color:white;
+  padding: 0px, 0px, 0px, 0px;
+  padding-left: 0%;
+  padding-right: 0%;
+  display: block;
+  font-size: 10px;
+  text-align: center;
+  padding-top: 75%;
+}
 /* The button used to open the sidebar */
 .openbtn  {
   font-size: 20px;
